--- a/www/views/main.html
+++ b/www/views/main.html
@@ -1,16 +1,23 @@
-<ion-view view-title="Main">
+<ion-view view-title="Apartments" class="header-title">
     <ion-nav-buttons side="right">
-        <i class="icon ion-trash-b" ng-click="deleteToggle()"></i>
-        <i class="icon ion-plus" ng-click="goToState('app.addApartment')"></i>
+        <button ng-click="deleteToggle()" class="button buttons button-clear header-item {{classToggle}}">
+            <i class="icon ion-trash-b"></i>
+        </button>
+        <button ng-click="goToState('app.addApartment')" class="button buttons button-clear header-item">
+            <i class="icon ion-plus"></i>
+        </button>
     </ion-nav-buttons>
     <ion-content>
-        <button class="button button-block button-positive" ng-click="deleteAll()">Delete All</button>
-        <div class="list list-inset">
-            <div class="item item-button-right" ng-repeat="apartment in data" ng-click="getItem({{apartment.id}})">
-                {{apartment.name}}
-                <button class="button button-assertive" ng-show="visible" ng-click="deleteItem({{apartment.id}})">
-                    <i class="icon ion-close"></i>
-                </button>
+        <div class="main">
+            <!-- TODO: Add 'Delete All option only when the deleteToggle is toggled -->
+            <button class="button button-block button-balanced" ng-click="showConfirm(apartment.id, true)" ng-show="visible">Delete All</button>
+            <div class="list">
+                <div class="item item-button-right" ng-repeat="apartment in data" ng-click="getItem(apartment.id)">
+                    {{apartment.name}}
+                    <button class="button button-assertive" ng-show="visible" ng-click="showConfirm(apartment.id, false)">
+                        <i class="icon ion-close"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </ion-content>
